syntax = "proto3";
package server_status;

message StatRequest {
  string name = 1;
  string version = 2;
  uint64 latest_ts = 3;

  uint64 uptime = 4;

  // netowrk
  uint64 network_rx = 5;
  uint64 network_tx = 6;
  uint64 network_in = 7;
  uint64 network_out = 8;

  //
  double cpu = 9;
  uint64 memory_total = 10;
  uint64 memory_used = 11;
  uint64 hdd_total = 12;
  uint64 hdd_used = 13;

  string custom = 14;

}

message Response {
  int32 code = 1;
  string message = 2;
}

service ServerStatus {rpc Report(StatRequest) returns (Response);}